--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
     
     <h2>My Portfolio</h2>
     <p>Resize the browser window to see the responsive effect.</p>
+
+  <div class="row">
+  <div class="column">
+  <div class="content">
+    <img src="mountains.jpg" alt="Mountains" style="width:100%">
+    <h3>My Work</h3>
+    <p>Lorem ipsum..</p>
+   </div>
+  </div>
+
 </body>
 </html>
