add more columns, rows and content divs. it will showcase more projects

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
   <div class="main">
 
-    <h1>Ross Beckman</h1>
+    <h1><strong>Ross Beckman</strong></h1>
     <hr>
     
-    <h2>My Portfolio</h2>
-    <p>Resize the browser window to see the responsive effect.</p>
+    <h2><em>My Portfolio</em></h2>
+    <p>Check out some of my projects!</p>
 
   <div class="row">
   <div class="column">
@@ -22,5 +22,41 @@
    </div>
   </div>
 
+  <div class="row">
+  <div class="column">
+  <div class="content">
+     <img src="mountains.jpg" alt="Mountains" style="width:100%">
+     <h3>My Work</h3>
+     <p>Lorem ipsum..</p>
+   </div>
+  </div>
+
+  <div class="row">
+  <div class="column">
+  <div class="content">
+     <img src="mountains.jpg" alt="Mountains" style="width:100%">
+     <h3>My Work</h3>
+     <p>Lorem ipsum..</p>
+   </div>
+  </div>
+
+  <div class="row">
+  <div class="column">
+  <div class="content">
+     <img src="mountains.jpg" alt="Mountains" style="width:100%">
+     <h3>My Work</h3>
+     <p>Lorem ipsum..</p>
+    </div>
+   </div>
+  </div>
+
+  <div class="content">
+    <img src="bear.jpg" alt="Bear" style="width:100%">
+    <h3>Some Other Work</h3>
+    <p>Lorem ipsum..</p>
+  </div>
+
+<!--Ends Main-->
+</div>
 </body>
 </html>
