add my background and hobbies. It will show ordered and unordered lists.

--- a/index.html
+++ b/index.html
@@ -52,11 +52,27 @@
 
   <div class="content">
     <img src="bear.jpg" alt="Bear" style="width:100%">
-    <h3>Some Other Work</h3>
-    <p>Lorem ipsum..</p>
+    <h2>About me</h2>
+
+    <h3>My Background</h3>
+    <ul>
+      <li>5 years as an audio engineer</li>
+      <li>4 years of college at PCC</li>
+      <li>2 years as a lab technition at PCC</li>
+      <li>7 years freelance with custom pc builds, repair and troubleshooting</li>
+    </ul>
+
+    <h3>My Hobbies</h3>
+      <ol>
+        <li>Makings beats with Reason and FL Studio.</li>
+        <li>Building computers.</li>
+        <li>learning new operating systems.</li>
+      </ol>
+
+
+    <p>Check out my GitHub repo!</p>
   </div>
 
-<!--Ends Main-->
-</div>
+  </div>
 </body>
 </html>
