add href links. It will add a clinkable link to individual repo projects

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h1><strong>Ross Beckman</strong></h1>
     <hr>
     
-    <h2><em>My Portfolio</em></h2>
+    <h2>My Portfolio</h2>
     <p>Check out some of my projects!</p>
 
   <div class="row">
   <div class="column">
   <div class="content">
     <img src="mountains.jpg" alt="Mountains" style="width:100%">
-    <h3>My Work</h3>
-    <p>Lorem ipsum..</p>
+    <h3>Animal Shelter</h3>
+    <p>click <a href="https://github.com/zerofreddo/animal-shelter"><em>here</em></a> to go to project.</p>
    </div>
   </div>
 
@@ -26,8 +26,8 @@
   <div class="column">
   <div class="content">
      <img src="mountains.jpg" alt="Mountains" style="width:100%">
-     <h3>My Work</h3>
-     <p>Lorem ipsum..</p>
+     <h3>Vacation</h3>
+     <p>click <a href="https://github.com/zerofreddo/vacation"><em>here</em></a> to go to project.</p>
    </div>
   </div>
 
@@ -35,8 +35,8 @@
   <div class="column">
   <div class="content">
      <img src="mountains.jpg" alt="Mountains" style="width:100%">
-     <h3>My Work</h3>
-     <p>Lorem ipsum..</p>
+     <h3>My Blog</h3>
+     <p>click <a href="https://github.com/zerofreddo/my-blog"><em>here</em></a> to go to project.</p>
    </div>
   </div>
 
@@ -44,8 +44,8 @@
   <div class="column">
   <div class="content">
      <img src="mountains.jpg" alt="Mountains" style="width:100%">
-     <h3>My Work</h3>
-     <p>Lorem ipsum..</p>
+     <h3>Dog Blog</h3>
+     <p>click <a href="https://github.com/zerofreddo/dog-blog"><em>here</em></a> to go to project.</p>
     </div>
    </div>
   </div>
@@ -67,8 +67,8 @@
         <li>Makings beats with Reason and FL Studio.</li>
         <li>Building computers.</li>
         <li>learning new operating systems.</li>
+        <li>Learning how to code with html, css and javaScript.</li>
       </ol>
-
 
     <p>Check out my GitHub repo!</p>
   </div>
