add images and resize. It will link the href with the images and their proper names.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="row">
   <div class="column">
   <div class="content">
-    <img src="mountains.jpg" alt="Mountains" style="width:100%">
+    <img src="img/shelter.jpg" alt="Animal Shelter" style="width:30%">
     <h3>Animal Shelter</h3>
     <p>click <a href="https://github.com/zerofreddo/animal-shelter"><em>here</em></a> to go to project.</p>
    </div>
@@ -25,7 +25,7 @@
   <div class="row">
   <div class="column">
   <div class="content">
-     <img src="mountains.jpg" alt="Mountains" style="width:100%">
+     <img src="img/texas.jpg" alt="vaction in texas" style="width:30%">
      <h3>Vacation</h3>
      <p>click <a href="https://github.com/zerofreddo/vacation"><em>here</em></a> to go to project.</p>
    </div>
@@ -34,7 +34,7 @@
   <div class="row">
   <div class="column">
   <div class="content">
-     <img src="mountains.jpg" alt="Mountains" style="width:100%">
+     <img src="img/blog.jpg" alt="Blog" style="width:30%">
      <h3>My Blog</h3>
      <p>click <a href="https://github.com/zerofreddo/my-blog"><em>here</em></a> to go to project.</p>
    </div>
@@ -43,7 +43,7 @@
   <div class="row">
   <div class="column">
   <div class="content">
-     <img src="mountains.jpg" alt="Mountains" style="width:100%">
+     <img src="img/dog.jpg" alt="Mountains" style="width:30%">
      <h3>Dog Blog</h3>
      <p>click <a href="https://github.com/zerofreddo/dog-blog"><em>here</em></a> to go to project.</p>
     </div>
@@ -51,7 +51,7 @@
   </div>
 
   <div class="content">
-    <img src="bear.jpg" alt="Bear" style="width:100%">
+    <img src="img/me.jpg" alt="About me" style="width:30%">
     <h2>About me</h2>
 
     <h3>My Background</h3>
