add img styling. it will add image shadow.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+ 
   <title>My-Portfolio</title>
 </head>
 <body>
@@ -13,6 +13,7 @@
     <h2>My Portfolio</h2>
     <p>Check out some of my projects!</p>
 
+  <div class="img"></div>    
   <div class="row">
   <div class="column">
   <div class="content">
@@ -63,12 +64,12 @@
     </ul>
 
     <h3>My Hobbies</h3>
-      <ol>
-        <li>Makings beats with Reason and FL Studio.</li>
-        <li>Building computers.</li>
-        <li>learning new operating systems.</li>
-        <li>Learning how to code with html, css and javaScript.</li>
-      </ol>
+    <ol>
+      <li>Makings beats with Reason and FL Studio.</li>
+      <li>Building computers.</li>
+      <li>learning new operating systems.</li>
+      <li>Learning how to code with html, css and javaScript.</li>
+    </ol>
 
     <p>Check out my GitHub repo!</p>
   </div>
