add span. It will add color some text blue within a sentence

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- 
+<head></head>
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/styles.css">
+
   <title>My-Portfolio</title>
 </head>
 <body>
@@ -11,7 +13,7 @@
     <hr>
     
     <h2>My Portfolio</h2>
-    <p>Check out some of my projects!</p>
+    <p>Check out some of my<span style="color:blue"> projects!</span></p>
 
       
   <div class="row">
@@ -69,7 +71,7 @@
       </ol>
 
       <p>Check out my GitHub repo!</p>
+    </div>
   </div>
- </div>
 </body>
 </html>
