--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="row">
     <div class="column">
       <div class="content">
-        <img src="img/shelter.jpg" alt="Animal Shelter" style="width:30%">
+        <img class="img" img src="img/shelter.jpg" alt="Animal Shelter" style="width:30%">
         <h3>Animal Shelter</h3>
         <p>click <a href="https://github.com/zerofreddo/animal-shelter"><em>here</em></a> to go to project.</p>
       </div>
@@ -27,7 +27,7 @@
 
     <div class="column">
       <div class="content">
-        <img src="img/texas.jpg" alt="vaction in texas" style="width:30%">
+        <img class="img" img src="img/texas.jpg" alt="vaction in texas" style="width:30%">
         <h3>Vacation</h3>
         <p>click <a href="https://github.com/zerofreddo/vacation"><em>here</em></a> to go to project.</p>
       </div>
@@ -35,7 +35,7 @@
   
     <div class="column">
       <div class="content">
-        <img src="img/blog.jpg" alt="Blog" style="width:30%">
+        <img class="img" img src="img/blog.jpg" alt="Blog" style="width:30%">
         <h3>My Blog</h3>
         <p>click <a href="https://github.com/zerofreddo/my-blog"><em>here</em></a> to go to project.</p>
       </div>
@@ -43,7 +43,7 @@
 
     <div class="column">
       <div class="content">
-        <img src="img/dog.jpg" alt="Mountains" style="width:30%">
+        <img class="img" img src="img/dog.jpg" alt="Mountains" style="width:30%">
         <h3>Dog Blog</h3>
         <p>click <a href="https://github.com/zerofreddo/dog-blog"><em>here</em></a> to go to project.</p>
       </div>
