--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <li>Learning how to code with html, css and javaScript.</li>
       </ol>
 
-      <p>Check out my GitHub repo!</p>
+      <p>Check out my GitHub repo <a href="https://github.com/zerofreddo"><strong>here!</strong></p>
     </div>
   </div>
 </body>
